// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dynamodb resolvers something 1`] = `
{
  "filter": {
    "expression": "#shift = :shift",
    "expressionNames": {
      "#shift": "shift",
    },
    "expressionValues": {
      ":shift": {
        "N": 10,
      },
    },
  },
  "index": "nameIndex",
  "operation": "Query",
  "query": {
    "expression": "#name = :name",
    "expressionNames": {
      "#name": "name",
    },
    "expressionValues": {
      ":name": {
        "S": "test",
      },
    },
  },
  "select": "ALL_ATTRIBUTES",
}
`;

exports[`dynamodb resolvers something 2`] = `
[
  {
    "a": 10,
  },
]
`;

exports[`error handling error 1`] = `
{
  "message": "foo",
}
`;

exports[`error handling unauthorized 1`] = `
{
  "message": "Unauthorized",
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size beginsWith in a delete statement 1`] = `
{
  "statements": [
    "DELETE FROM "persons" WHERE "name" LIKE :P0",
  ],
  "variableMap": {
    ":P0": "te%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size beginsWith in mysql 1`] = `
{
  "statements": [
    "SELECT * FROM \`persons\` WHERE \`name\` LIKE :P0",
  ],
  "variableMap": {
    ":P0": "te%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size beginsWith keeps a wildcard already in the value 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "name" LIKE :P0",
  ],
  "variableMap": {
    ":P0": "a%b%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size beginsWith renders a trailing wildcard 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "name" LIKE :P0",
  ],
  "variableMap": {
    ":P0": "te%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size beginsWith with an empty string 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "name" LIKE :P0",
  ],
  "variableMap": {
    ":P0": "%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size between a null bound 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "age" BETWEEN NULL AND :P0",
  ],
  "variableMap": {
    ":P0": 65,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size between and beginsWith in an or group 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE ("age" BETWEEN :P0 AND :P1) OR ("name" LIKE :P2)",
  ],
  "variableMap": {
    ":P0": 18,
    ":P1": 65,
    ":P2": "te%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size between in an update statement 1`] = `
{
  "statements": [
    "UPDATE "persons" SET "active" = :P0 WHERE "age" BETWEEN :P1 AND :P2",
  ],
  "variableMap": {
    ":P0": false,
    ":P1": 18,
    ":P2": 65,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size between in mysql 1`] = `
{
  "statements": [
    "SELECT * FROM \`persons\` WHERE \`age\` BETWEEN :P0 AND :P1",
  ],
  "variableMap": {
    ":P0": 18,
    ":P1": 65,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size between two numbers 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "age" BETWEEN :P0 AND :P1",
  ],
  "variableMap": {
    ":P0": 18,
    ":P1": 65,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size between two strings 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "name" BETWEEN :P0 AND :P1",
  ],
  "variableMap": {
    ":P0": "a",
    ":P1": "m",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size between two type hints 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "birthday" BETWEEN :P0 AND :P1",
  ],
  "variableMap": {
    ":P0": "2020-01-01",
    ":P1": "2020-12-31",
  },
  "variableTypeHintMap": {
    ":P0": "DATE",
    ":P1": "DATE",
  },
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size empty size object 1`] = `
{
  "statements": [
    "SELECT * FROM "persons"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size empty size object alongside a real condition in a group 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE  AND ("id" = :P0)",
  ],
  "variableMap": {
    ":P0": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size empty size object alongside a real condition on one column 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE  AND "name" = :P0",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size empty size object in a group 1`] = `
{
  "statements": [
    "SELECT * FROM "persons"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size and beginsWith in a group 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE (LENGTH ("name") = :P0) AND ("country" LIKE :P1)",
  ],
  "variableMap": {
    ":P0": 3,
    ":P1": "de%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size and beginsWith on one column 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE LENGTH ("name") = :P0 AND "name" LIKE :P1",
  ],
  "variableMap": {
    ":P0": 3,
    ":P1": "te%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size compares the column length 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE LENGTH ("name") = :P0",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size in an update statement 1`] = `
{
  "statements": [
    "UPDATE "persons" SET "active" = :P0 WHERE LENGTH ("name") = :P1",
  ],
  "variableMap": {
    ":P0": false,
    ":P1": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size in mysql 1`] = `
{
  "statements": [
    "SELECT * FROM \`persons\` WHERE LENGTH (\`name\`) = :P0",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size nested in an or of an and 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE ((LENGTH ("name") = :P0))",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size on a qualified column 1`] = `
{
  "statements": [
    "SELECT * FROM "private"."persons" WHERE LENGTH ("persons"."name") = :P0",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size with a nested between 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE LENGTH ("name") BETWEEN :P0 AND :P1",
  ],
  "variableMap": {
    ":P0": 2,
    ":P1": 8,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size with a null value 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE LENGTH ("name") = NULL",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size with each comparison operator 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE LENGTH ("a") != :P0 AND LENGTH ("b") > :P1 AND LENGTH ("c") >= :P2 AND LENGTH ("d") < :P3 AND LENGTH ("e") <= :P4",
  ],
  "variableMap": {
    ":P0": 1,
    ":P1": 2,
    ":P2": 3,
    ":P3": 4,
    ":P4": 5,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size with order by and limit 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE LENGTH ("name") > :P0 ORDER BY "name" DESC LIMIT :P1",
  ],
  "variableMap": {
    ":P0": 2,
    ":P1": 5,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias beginsWith, between and size size with two comparisons on one column 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE LENGTH ("name") = :P0 AND LENGTH ("name") > :P1",
  ],
  "variableMap": {
    ":P0": 3,
    ":P1": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias from as a table alias insert uses table and ignores from 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name") VALUES (:P0)",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias from as a table alias select with a qualified from 1`] = `
{
  "statements": [
    "SELECT "id" FROM "domain"."color"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias from as a table alias select with from 1`] = `
{
  "statements": [
    "SELECT * FROM "persons"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias from as a table alias select with from and the other clauses 1`] = `
{
  "statements": [
    "SELECT "id" FROM "domain"."color" WHERE "id" = :P0 LIMIT :P1",
  ],
  "variableMap": {
    ":P0": 1,
    ":P1": 2,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers additional conditions and the from alias from as a table alias select with from in mysql 1`] = `
{
  "statements": [
    "SELECT * FROM \`persons\`",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers attributeExists nested or 1`] = `
{
  "statements": [
    "SELECT * FROM "supplier" WHERE "id" = :P0 AND (("deleted" = :P1) OR ("deleted" IS NULL))",
  ],
  "variableMap": {
    ":P0": "123456",
    ":P1": false,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers attributeExists true false 1`] = `
{
  "statements": [
    "SELECT * FROM "supplier" WHERE "created" IS NOT NULL AND "deleted" IS NULL",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs attributeExists alongside another condition 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "id" = :P0 AND "id" IS NOT NULL",
  ],
  "variableMap": {
    ":P0": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs contains wraps the value in wildcards 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "name" LIKE :P0",
  ],
  "variableMap": {
    ":P0": "%test%",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty column list 1`] = `
{
  "statements": [
    "SELECT FROM "domain"."color"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty column list in mysql 1`] = `
{
  "statements": [
    "SELECT FROM \`domain\`.\`color\`",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty column list with limit 1`] = `
{
  "statements": [
    "SELECT FROM "domain"."color" LIMIT :P0",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty condition object alongside a real condition 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "name" = :P0 AND",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty condition object for a column 1`] = `
{
  "statements": [
    "SELECT * FROM "persons"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty nested or group 1`] = `
{
  "statements": [
    "SELECT * FROM "persons"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty object in an and array 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE ("id" = :P0) AND",
  ],
  "variableMap": {
    ":P0": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty objects in an or array 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE  OR",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty orderBy array 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."color"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty orderBy array in mysql 1`] = `
{
  "statements": [
    "SELECT * FROM \`domain\`.\`color\`",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty orderBy array with limit 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."color" LIMIT :P0",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty returning array in insert 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name") VALUES (:P0) RETURNING",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty returning array in remove 1`] = `
{
  "statements": [
    "DELETE FROM "persons" WHERE "id" = :P0 RETURNING",
  ],
  "variableMap": {
    ":P0": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs empty values object in update 1`] = `
{
  "statements": [
    "UPDATE "persons" SET WHERE "id" = :P0",
  ],
  "variableMap": {
    ":P0": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs false and zero values are bound 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("active", "score") VALUES (:P0, :P1)",
  ],
  "variableMap": {
    ":P0": false,
    ":P1": 0,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs lowercase orderBy dir is uppercased 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" ORDER BY "name" DESC",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs multiple conditions on one column 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "id" >= :P0 AND "id" <= :P1 AND "id" != :P2",
  ],
  "variableMap": {
    ":P0": 1,
    ":P1": 9,
    ":P2": 5,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs multiple conditions on one column inside a group 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE ("id" = :P0 AND "id" > :P1) AND ("name" = :P2)",
  ],
  "variableMap": {
    ":P0": 1,
    ":P1": 0,
    ":P2": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs notContains does not wrap the value 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" WHERE "name" NOT LIKE :P0",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs null alongside a type hint 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("id", "country") VALUES (:P0, NULL)",
  ],
  "variableMap": {
    ":P0": "0e0d0c0b-0a09-0807-0605-040302010000",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
  },
}
`;

exports[`rds resolvers empty, null and repeated clause inputs null mixed with bound values in insert 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name", "country") VALUES (:P0, NULL)",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs null orderBy dir defaults to ascending 1`] = `
{
  "statements": [
    "SELECT * FROM "persons" ORDER BY "name" ASC",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs null value in insert values 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name") VALUES (NULL)",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs null value in update values 1`] = `
{
  "statements": [
    "UPDATE "persons" SET "country" = NULL WHERE "id" = :P0",
  ],
  "variableMap": {
    ":P0": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs returning column array in insert 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name") VALUES (:P0) RETURNING "id", "name"",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs returning star in insert 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name") VALUES (:P0) RETURNING *",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs returning star in remove 1`] = `
{
  "statements": [
    "DELETE FROM "persons" WHERE "id" = :P0 RETURNING *",
  ],
  "variableMap": {
    ":P0": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers empty, null and repeated clause inputs undefined value in insert values 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name") VALUES (NULL)",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql insert 1`] = `
{
  "statements": [
    "INSERT INTO \`persons\` (\`name\`) VALUES (:P0)",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql raw string 1`] = `
{
  "statements": [
    "UPDATE "document" set "data" = 10 WHERE id = adb626eb-4ce5-452a-a917-3943a37f202b",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql remove 1`] = `
{
  "statements": [
    "DELETE FROM \`persons\` WHERE \`id\` = :P0",
  ],
  "variableMap": {
    ":P0": "1232",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql select 1`] = `
{
  "statements": [
    "SELECT \`id\`, \`name\` FROM \`UserGroup\` WHERE (\`name\` = :P0) OR (\`id\` > :P1) ORDER BY \`name\` ASC, \`id\` DESC LIMIT :P2 OFFSET :P3",
  ],
  "variableMap": {
    ":P0": "Stephane",
    ":P1": 10,
    ":P2": 10,
    ":P3": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers mysql sql tagged template 1`] = `
{
  "statements": [
    "insert into Post(id, text) values(:P0, :P1)",
    "select * from Post where id = :P2",
  ],
  "variableMap": {
    ":P0": "adb626eb-4ce5-452a-a917-3943a37f202b",
    ":P1": "hello world",
    ":P2": "adb626eb-4ce5-452a-a917-3943a37f202b",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
  },
}
`;

exports[`rds resolvers mysql type hints 1`] = `
{
  "statements": [
    "SELECT * FROM \`UserGroup\` WHERE (\`id\` = :P0) AND (\`started\` < :P1)",
  ],
  "variableMap": {
    ":P0": "1232",
    ":P1": "2022-03-02T00:00:00.000Z",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
    ":P1": "TIMESTAMP",
  },
}
`;

exports[`rds resolvers mysql update 1`] = `
{
  "statements": [
    "UPDATE \`persons\` SET \`name\` = :P0, \`birthday\` = :P1, \`country\` = :P2 WHERE \`id\` = :P3",
  ],
  "variableMap": {
    ":P0": "name",
    ":P1": "today",
    ":P2": "home",
    ":P3": "abc123",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql insert 1`] = `
{
  "statements": [
    "INSERT INTO "persons" ("name") VALUES (:P0) RETURNING *",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql json functions in raw string 1`] = `
{
  "statements": [
    "UPDATE "document" set "data" = jsonb_set("data", '{key}', '"value" WHERE id = adb626eb-4ce5-452a-a917-3943a37f202b",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql raw string 1`] = `
{
  "statements": [
    "UPDATE "document" set "data" = 10 WHERE id = adb626eb-4ce5-452a-a917-3943a37f202b",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql remove 1`] = `
{
  "statements": [
    "DELETE FROM "persons" WHERE "id" = :P0 RETURNING "id", "name"",
  ],
  "variableMap": {
    ":P0": "1232",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql select 1`] = `
{
  "statements": [
    "SELECT "id", "name" FROM "UserGroup" WHERE ("name" = :P0) OR ("id" > :P1) ORDER BY "name" ASC, "id" DESC LIMIT :P2 OFFSET :P3",
  ],
  "variableMap": {
    ":P0": "Stephane",
    ":P1": 10,
    ":P2": 10,
    ":P3": 1,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers postgresql sql tagged template 1`] = `
{
  "statements": [
    "insert into Post(id, text) values(:P0, :P1)",
    "select * from Post where id = :P2",
  ],
  "variableMap": {
    ":P0": "adb626eb-4ce5-452a-a917-3943a37f202b",
    ":P1": "hello world",
    ":P2": "adb626eb-4ce5-452a-a917-3943a37f202b",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
  },
}
`;

exports[`rds resolvers postgresql type hints 1`] = `
{
  "statements": [
    "SELECT * FROM "UserGroup" WHERE ("id" = :P0) AND ("started" < :P1)",
  ],
  "variableMap": {
    ":P0": "1232",
    ":P1": "2022-03-02T00:00:00.000Z",
  },
  "variableTypeHintMap": {
    ":P0": "UUID",
    ":P1": "TIMESTAMP",
  },
}
`;

exports[`rds resolvers postgresql update 1`] = `
{
  "statements": [
    "UPDATE "persons" SET "name" = :P0, "birthday" = :P1, "country" = :P2 WHERE "id" = :P3",
  ],
  "variableMap": {
    ":P0": "name",
    ":P1": "today",
    ":P2": "home",
    ":P3": "abc123",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers schema-qualified identifiers mysql select qualified table 1`] = `
{
  "statements": [
    "SELECT * FROM \`domain\`.\`item\`",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers schema-qualified identifiers postgresql insert into qualified table 1`] = `
{
  "statements": [
    "INSERT INTO "private"."persons" ("name") VALUES (:P0)",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers schema-qualified identifiers postgresql qualified column in where clause 1`] = `
{
  "statements": [
    "SELECT * FROM "private"."persons" WHERE "persons"."id" = :P0",
  ],
  "variableMap": {
    ":P0": 123,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers schema-qualified identifiers postgresql select qualified columns 1`] = `
{
  "statements": [
    "SELECT "id", "persons"."name" FROM "private"."persons"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers schema-qualified identifiers postgresql select qualified table 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."item"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers schema-qualified identifiers unqualified name is quoted as one segment 1`] = `
{
  "statements": [
    "SELECT * FROM "item"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases empty and condition in where 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."color" LIMIT :P0",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases empty where object 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."color" LIMIT :P0",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases empty where object in remove 1`] = `
{
  "statements": [
    "DELETE FROM "persons"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases empty where object in update 1`] = `
{
  "statements": [
    "UPDATE "persons" SET "name" = :P0",
  ],
  "variableMap": {
    ":P0": "test",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases limit and offset absent from args 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."color"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases limit and offset zero 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."color" LIMIT :P0 OFFSET :P1",
  ],
  "variableMap": {
    ":P0": 0,
    ":P1": 0,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases limit provided in args 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."color" LIMIT :P0",
  ],
  "variableMap": {
    ":P0": 3,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases mysql star column 1`] = `
{
  "statements": [
    "SELECT * FROM \`domain\`.\`color\`",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases postgresql star column 1`] = `
{
  "statements": [
    "SELECT * FROM "domain"."color"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers select statement edge cases qualified star column 1`] = `
{
  "statements": [
    "SELECT "id", "persons"."*" FROM "private"."persons"",
  ],
  "variableMap": {},
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers toJsonObject 1`] = `
[
  [
    {
      "IS ACTIVE": true,
      "ISBN-13": "978-1948132817",
      "author": "Mark Twain",
      "blob_value": "aGVsbG8=",
      "id": 12345,
      "tags": [
        "a",
        "b",
      ],
      "title": "Adventures of Huckleberry Finn",
    },
    {
      "IS ACTIVE": false,
      "ISBN-13": "978-1948132275",
      "author": "Jack London",
      "blob_value": "d29ybGQ=",
      "id": 67890,
      "optional_double": 12.34,
      "tags": [
        [
          true,
          false,
        ],
        [
          1.234,
        ],
        [
          1,
          2,
        ],
        [
          "a",
          "b",
        ],
      ],
      "title": "The Call of the Wild",
    },
  ],
]
`;

exports[`rds resolvers toJsonObject import paths default 1`] = `
[
  [
    {
      "ISBN-13": "978-1948132817",
      "author": "Mark Twain",
      "title": "Adventures of Huckleberry Finn",
    },
    {
      "ISBN-13": "978-1948132275",
      "author": "Jack London",
      "title": "The Call of the Wild",
    },
  ],
]
`;

exports[`rds resolvers toJsonObject import paths fully qualified 1`] = `
[
  [
    {
      "ISBN-13": "978-1948132817",
      "author": "Mark Twain",
      "title": "Adventures of Huckleberry Finn",
    },
    {
      "ISBN-13": "978-1948132275",
      "author": "Jack London",
      "title": "The Call of the Wild",
    },
  ],
]
`;

exports[`rds resolvers toJsonObject insert or update 1`] = `
[
  [
    {},
  ],
]
`;

exports[`rds resolvers toJsonObject update and select 1`] = `
[
  [
    {},
  ],
  [
    {
      "ISBN-13": "978-1948132817",
      "author": "Mark Twain",
      "title": "Adventures of Huckleberry Finn",
    },
    {
      "ISBN-13": "978-1948132275",
      "author": "Jack London",
      "title": "The Call of the Wild",
    },
  ],
]
`;

exports[`rds resolvers typehints TIMESTAMP 1`] = `
{
  "type": "TIMESTAMP",
  "value": "2023-02-01T00:00:00.000Z",
}
`;

exports[`rds resolvers typehints UUID 1`] = `
{
  "type": "UUID",
  "value": "abc123",
}
`;

exports[`rds resolvers where mixed inline and 1`] = `
{
  "statements": [
    "SELECT * FROM "supplier" WHERE "count" <= :P0 AND ("id" = :P1) AND "deleted" IS NULL",
  ],
  "variableMap": {
    ":P0": 10,
    ":P1": 123456,
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers where mixed or/and 1`] = `
{
  "statements": [
    "SELECT * FROM "supplier" WHERE ("id" = :P0) AND ("id" = :P1) AND "id" = :P2",
  ],
  "variableMap": {
    ":P0": "and eq",
    ":P1": "or eq 2",
    ":P2": "id eq",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers where mixed or/and multiple or 1`] = `
{
  "statements": [
    "SELECT * FROM "supplier" WHERE ("id" = :P0) AND ("id" = :P1) OR ("id" = :P2) AND "id" = :P3",
  ],
  "variableMap": {
    ":P0": "and eq",
    ":P1": "or eq 1",
    ":P2": "or eq 2",
    ":P3": "id eq",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers where nested ors with ands 1`] = `
{
  "statements": [
    "SELECT * FROM "supplier" WHERE "id" = :P0 AND ("id" = :P1) OR (("id" = :P2) OR ("id" = :P3)) OR ("id" = :P4)",
  ],
  "variableMap": {
    ":P0": "id eq",
    ":P1": "or 1",
    ":P2": "or nested 1",
    ":P3": "or nested 2",
    ":P4": "final or",
  },
  "variableTypeHintMap": {},
}
`;

exports[`rds resolvers where single value in and 1`] = `
{
  "statements": [
    "SELECT * FROM "supplier" WHERE ("id" = :P0)",
  ],
  "variableMap": {
    ":P0": 123456,
  },
  "variableTypeHintMap": {},
}
`;
